--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="nama_kharis_zakaria">Nama : Kharis Zakaria</string>
     <string name="nim">NIM : 6706180122</string>
     <string name="kelas">Kelas : 4203</string>
+    <string name="about">About</string>
 </resources>
